align-content bug for icons temporarily fixed with margin

--- a/flex_style.css
+++ b/flex_style.css
@@ -25,6 +25,7 @@
 }
 .sideMenuIcon{
 	flex-basis:4px;
+	margin-right:20px;
 	background-color:black;
 	
 }
@@ -58,6 +59,7 @@
 }
 .trackOption{
 	margin-left:-40px;
+	margin-top:40px;
 	background-color:blue;
 	color:red;
 }
